--- a/templates/guidelines-specs.html
+++ b/templates/guidelines-specs.html
@@ -169,7 +169,7 @@
                                                         <span class="label" data-template="lang:translate">datatype</span>
                                                     </div>
                                                     <div class="col-md-9">
-                                                        <span data-template="app-shared:print" data-template-key="datatype">teidata.enumerated</span>
+                                                        <a data-template="app-shared:set-attr" data-template-attr="href" data-template-key="datatypeURL"><span data-template="app-shared:print" data-template-key="datatype">teidata.enumerated</span></a>
                                                     </div>
                                                 </div>
                                                 <div class="row" data-template="app-shared:if-exists" data-template-key="closed_values">
